<resources>
    <string name="app_name">Boctor</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Boctor</string>
    <string name="nav_header_subtitle">a Nascar Production</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="btn_store">Store</string>
    <string name="btn_scan">Scan</string>
    <string name="btn_safe">Speichern</string>
    <string name="btn_bR_send">Senden</string>

    <string name="firstLayout">Analyse</string>
    <string name="secondLayout">Reset</string>
    <string name="thirdLayout">Bug Report</string>
    <string name="fourthLayout">Kontakt</string>

    <!-- TV Placeholder -->
    <string name="tvQuantity">Quantity</string>
    <string name="tvDeposit">Deposit</string>
    <string name="tvTotDep">Total Deposit</string>
    <string name="tvName">Name</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">Map</string>
</resources>
