<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddScanFragment"
    android:background="@color/color3">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center|top"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/tvName"
            android:textSize="25dp"
            android:id="@+id/tv_addSc_name"/>

        <TextView
            android:id="@+id/tv_addSc_barcode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="Barcode"
            android:textSize="13dp" />

        <ImageView
            android:id="@+id/imgV_addSc_pic"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginTop="16dp"
            android:minHeight="100dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/btn_addSc_store">

        <TextView
            android:id="@+id/tv_addSc_deposit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/tvDeposit"
            android:textSize="13dp" />

        <TextView
            android:id="@+id/tv_addSc_quantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/tvQuantity"
            android:textSize="25dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent">

            <ImageButton
                android:id="@+id/imgB_addSc_Minus"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginRight="20dp"
                android:background="@color/color3"
                android:src="@mipmap/ic_minus" />

            <ImageButton
                android:id="@+id/imgB_addSc_Bin"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:background="@color/color3"
                android:src="@mipmap/ic_bin" />


            <ImageButton
                android:id="@+id/imgB_addSc_Plus"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginLeft="20dp"
                android:background="@color/color3"
                android:src="@mipmap/ic_plus" />

        </LinearLayout>

        <TextView
            android:id="@+id/tv_addSc_totDep"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tvTotDep"
            android:textSize="15dp" />

    </LinearLayout>

    <Button
        android:id="@+id/btn_addSc_store"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/btn_store"
        android:background="@color/color2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/linearLayout" />

</android.support.constraint.ConstraintLayout>